// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Main after layout renders its children 1`] = `
<main
  class="css-view-1dbjc4n r-flex-13awgt0"
  data-testid="main"
  role="main"
  style="background-color: rgb(250, 249, 250);"
>
  <div
    class="css-text-76zvg2"
    dir="auto"
  >
    OHAI
  </div>
</main>
`;

exports[`Main renders nothing until layout 1`] = `
<main
  class="css-view-1dbjc4n r-flex-13awgt0"
  data-testid="main"
  role="main"
  style="background-color: rgb(250, 249, 250);"
/>
`;
